# cldtcwt

./: .clang_complete  .gitignore  .lvimrc  .travis.yml  AUTHORS.md  CMakeLists.txt  DisplayOutput_2AbsToRGBA_2kernel_8h_source.html  DisplayOutput_2GreyscaleToRGBA_2kernel_8h_source.html  Doxyfile.in  Filter_2DecimateFilterX_2decimateFilterX_8h_source.html  Filter_2DecimateFilterX_2kernel_8h_source.html  Filter_2DecimateFilterY_2kernel_8h_source.html  Filter_2DecimateTripleFilterX_2kernel_8h_source.html  Filter_2FilterX_2filterX_8h_source.html  Filter_2FilterX_2kernel_8h_source.html  Filter_2FilterY_2kernel_8h_source.html  Filter_2ImageToImageBuffer_2kernel_8h_source.html  Filter_2PadX_2kernel_8h_source.html  Filter_2PadY_2kernel_8h_source.html  Filter_2QuadToComplexDecimateFilterY_2kernel_8h_source.html  Filter_2QuadToComplex_2kernel_8h_source.html  Filter_2ScaleImageToImageBuffer_2kernel_8h_source.html  Filter_2TripleQuadToComplexDecimateFilterY_2kernel_8h_source.html  KeypointDescriptor_2kernel_8h_source.html  KeypointDetector_2Accumulate_2kernel_8h_source.html  KeypointDetector_2Concat_2kernel_8h_source.html  KeypointDetector_2EnergyMaps_2BTK_2kernel_8h_source.html  KeypointDetector_2EnergyMaps_2CrossProduct_2kernel_8h_source.html  KeypointDetector_2EnergyMaps_2Eigen_2kernel_8h_source.html  KeypointDetector_2EnergyMaps_2EnergyMap_2kernel_8h_source.html  KeypointDetector_2EnergyMaps_2InterpMap_2kernel_8h_source.html  KeypointDetector_2EnergyMaps_2InterpPhaseMap_2kernel_8h_source.html  KeypointDetector_2EnergyMaps_2PyramidSum_2kernel_8h_source.html  KeypointDetector_2FindMax_2kernel_8h_source.html  Makefile.am  README.md  SpeedComparisonFilters_2CopyImageLinearly_2kernel_8h_source.html  SpeedComparisonFilters_2CopyImage_2kernel_8h_source.html  SpeedComparisonFilters_2DecimateFilterX_2ForwardLoadReverseFilter_2decimateFilterX_8h_source.html  SpeedComparisonFilters_2DecimateFilterX_2ForwardLoadReverseFilter_2kernel_8h_source.html  (+462 more)
cldtcwt/: CMakeLists.txt
cldtcwt/CL/: cl.hpp
cldtcwt/DTCWT/: dtcwt.cc  dtcwt.h  intDtcwt.cc  intDtcwt.h
cldtcwt/DisplayOutput/: VideoReader.h  calculator.cc  calculator.h  calculatorInterface.cc  calculatorInterface.h
cldtcwt/DisplayOutput/AbsToRGBA/: absToRGBA.cc  absToRGBA.h  kernel.h
cldtcwt/DisplayOutput/GreyscaleToRGBA/: greyscaleToRGBA.cc  kernel.cl  kernel.h
cldtcwt/Filter/: imageBuffer.h  referenceImplementation.cc
cldtcwt/Filter/DecimateFilterX/: decimateFilterX.cc  kernel.cl
cldtcwt/Filter/DecimateFilterY/: decimateFilterY.cc  decimateFilterY.h  kernel.cl.namespace  kernel.h
cldtcwt/Filter/DecimateTripleFilterX/: decimateTripleFilterX.h  kernel.cl.namespace  kernel.h
cldtcwt/Filter/FilterY/: kernel.cl  kernel.h
cldtcwt/Filter/ImageToImageBuffer/: kernel.cl  kernel.h
cldtcwt/Filter/PadX/: kernel.cl  kernel.h  padX.cc
cldtcwt/Filter/PadY/: kernel.cl  kernel.cl.namespace  padY.cc
cldtcwt/Filter/QuadToComplex/: kernel.h  quadToComplex.cc  quadToComplex.h
cldtcwt/Filter/QuadToComplexDecimateFilterY/: kernel.h  q2cDecimateFilterY.h
cldtcwt/Filter/ScaleImageToImageBuffer/: kernel.cl.namespace  kernel.h
cldtcwt/Filter/TripleQuadToComplexDecimateFilterY/: kernel.cl  kernel.cl.namespace  kernel.h  tripleQ2cDecimateFilterY.cc
cldtcwt/KeypointDescriptor/: extractDescriptors.cc  kernel.cl  kernel.cl.namespace  kernel.h
cldtcwt/KeypointDetector/Accumulate/: accumulate.h  kernel.h
cldtcwt/KeypointDetector/Concat/: concat.cc  concat.h  kernel.cl
cldtcwt/KeypointDetector/FindMax/: findMax.cc  findMax.h  kernel.cl
cldtcwt/hdf5/: hdfwriter.h
cldtcwt/util/: clUtil.cc  clUtil.h  clUtilCV.h
debian/: README  (+27 more)
src/: CMakeLists.txt  cldtcwt.pc.in
src/BufferTrials/: filter.cc  filter.h  filterXKernel.cl  imageBuffer.cc  imageBuffer.h  referenceImplementation.cc  referenceImplementation.h  speedTest.cc  speedTestBufferTrial.cc  testBufferTrial.cc
src/CL/: cl.hpp
src/DTCWT/: CMakeLists.txt  dtcwt.cc  dtcwt.h  energyMapEigen.h  filterer.cc  filterer.h  fourTree.h  intDtcwt.cc  intDtcwt.h
src/DTCWT-old/: dtcwt.cc  dtcwt.h  filterer.cc  filterer.h  fourTree.cc  fourTree.h
src/DisplayOutput/: CMakeLists.txt  VBOBuffer.cc  VBOBuffer.h  VideoReader.cc  VideoReader.h  calculator.cc  calculator.h  calculatorInterface.cc  calculatorInterface.h  displayDTCWT.cc  displayVideoDTCWT.cc  texture.cc  texture.h  viewer.cc  viewer.h
src/Filter/: CMakeLists.txt  imageBuffer.cc  imageBuffer.h  referenceImplementation.h  speedTest.cc
src/KeypointDescriptor/: CMakeLists.txt  extractDescriptors.cc  extractDescriptors.h  extractDescriptorsKernel.cl  kernel.cl  kernel.h
src/KeypointDetector/: CMakeLists.txt  concat.cc  concat.h  concatKernel.cl  concatKernel.h  findMax.cc  findMax.h  findMaxKernel.cl  findMaxKernel.cl.namespace  findMaxKernel.h  peakDetector.cc  peakDetector.h
src/MiscKernels/: CMakeLists.txt  abs.cc  abs.h  absToRGBA.cc  absToRGBA.h  absToRGBAKernel.cl  absToRGBAKernel.h  accumulate.cc  accumulate.h  accumulateKernel.h  greyscaleToRGBA.cc  greyscaleToRGBA.h  greyscaleToRGBAKernel.cl  greyscaleToRGBAKernel.h  pyramidSum.cc  pyramidSum.h  pyramidSumKernel.cl  pyramidSumKernel.h
src/avmm/: CMakeLists.txt  avmm.cc  avmm.h
src/hdf5/: CMakeLists.txt  hdfwriter.cc  hdfwriter.h  test.cc
src/test/: test.cc  testAccumulate.cc  testConcat.cc  testDescriptor.cc  testFilter.cc  testFindMax.cc  testOutput.cc  testOutputEigenDetector.cc  testPeakDetector.cc  testPyramidSum.cc  testRescale.cc  verify.cc  verifyBasic.cc  verifyDTCWT.sh  verifyInterpolation.sh
src/util/: CMakeLists.txt  clUtil.cc  clUtil.h  clUtilCV.cc  clUtilCV.h
test/: CMakeLists.txt  verifyBasic.cc  verifyDTCWT.sh  verifyInterpolation.sh
test/Filter/: speedTest.cc
test/hdf5/: test.cc
test/test/: test.cc  testAccumulate.cc  testConcat.cc  testDescriptor.cc  testFilter.cc  testFindMax.cc  testPeakDetector.cc  testPyramidSum.cc  testRescale.cc  verify.cc  verifyBasic.cc  verifyInterpolation.sh
tools/DisplayOutput/: CMakeLists.txt  calculatorInterface.cc  calculatorInterface.h  displayDTCWT.cc  displayVideoDTCWT.cc  texture.cc  viewer.cc  viewer.h
(+335 files in other folders)
